# egui-dashboard

./: Cargo.toml
dashboard/: Cargo.toml  Trunk.toml  index.html
dashboard_core/: Cargo.toml
dashboard_core/examples/: window.rs
dashboard_core/src/: lib.rs
