[package]
name = "dashboard_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dashboard_core"

[[example]]
name = "window"

[dependencies]
actix-web = "4.4.0"
mime_guess = "2.0.4"
rust-embed = { version = "8.0.0", features = ["compression"] }
tiny_http = "0.12.0"
tokio = { version = "1", features = ["full"] }
